# raptorbt

./: .gitignore  Cargo.toml  LICENSE  README.md  log.txt  pyproject.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
benches/: backtest_benchmark.rs
python/raptorbt/: __init__.py
src/: lib.rs
src/core/: error.rs  mod.rs  session.rs  timeseries.rs  types.rs
src/execution/: fees.rs  fill.rs  mod.rs  slippage.rs
src/indicators/: mod.rs  momentum.rs  rolling.rs  strength.rs  trend.rs  volatility.rs  volume.rs
src/metrics/: drawdown.rs  mod.rs  streaming.rs  trade_stats.rs
src/portfolio/: allocation.rs  engine.rs  mod.rs  monte_carlo.rs  position.rs
src/python/: bindings.rs  mod.rs  numpy_bridge.rs
src/signals/: expression.rs  mod.rs  processor.rs  synchronizer.rs
src/stops/: atr.rs  fixed.rs  mod.rs  trailing.rs
src/strategies/: basket.rs  mod.rs  multi.rs  options.rs  pairs.rs  single.rs  spreads.rs
tests/: test_indicators.rs  test_portfolio.rs
